# unity-bevy-benchmark

bevy-perf/: Cargo.toml  flake.nix
bevy-perf/configs/: 100k_config.json  20k_config.json  250k_config.json  40k_config.json  500k_configuratin.json  base.json
bevy-perf/src/: main.rs
unity-perf/Assets/Graphy - Ultimate Stats Monitor/Prefab/: [Graphy] VR.prefab  [Graphy].prefab
unity-perf/Assets/Graphy - Ultimate Stats Monitor/Runtime/UI/: G_SafeArea.cs
unity-perf/Assets/Materials/: Ground.mat  Item.mat  Robot.mat
unity-perf/Assets/Prefabs/: Circle.prefab  Item.prefab  Robot.prefab  Square.prefab
unity-perf/Assets/Scenes/: SampleScene.unity
unity-perf/Assets/Scenes/SampleScene/: SampleSub.unity
unity-perf/Assets/Scripts/: ReadFromFile.cs  RobotSystem.cs  SpawnerAuthoring.cs  SpawnerSystem.cs
unity-perf/Assets/Settings/: High_PipelineAsset.asset  Low_PipelineAsset.asset  Medium_PipelineAsset.asset  Ultra_PipelineAsset.asset  Very High_PipelineAsset.asset  Very Low_PipelineAsset.asset  Very Low_PipelineAsset_ForwardRenderer.asset
unity-perf/Assets/StreamingAssets/: configuration.json
unity-perf/ProjectSettings/: EditorSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
