[package]
name = "bevy-perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12" }
bevy_screen_diagnostics = "0.4.0"
bevy_turborand = "0.7.0"


[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [patch.crates-io]
# bevy = { path = "../../bevy" }

