[package]
name = "bevy-perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.0" }
bevy_screen_diagnostics = "0.6.0"
bevy_turborand = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
